# MTG

./: pyproject.toml
notebooks/: mtg_quick_analysis.ipynb
src/mtg/: __init__.py
