[tool.poetry]
name = "mtg"
version = "0.1.0"
description = ""
authors = ["Leonard Rosen"]
packages = [
    { include = "mtg", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "*"
numpy = "*"
jupyter = "*"
matplotlib = "*"
seaborn = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"